# pythonHelpers

./: .gitignore  CONTRIBUTING.md  HOW_TO_INSTALL.md  HOW_TO_INSTALL_PYTHON_APPS.md  README.md  _config.yml  package_name.txt  pyproject.toml  requirements.txt  requirements_experimental.txt  requirements_experimental_name.txt  requirements_external.txt  requirements_external_name.txt  requirements_internal_lib_name.txt  requirements_internal_tool.txt  requirements_internal_tool_name.txt  setup.py
play_helpers/: _git_info.py  _tool_name.py  _version.py  ph_constants.py  ph_crypto.py  ph_data_master.py  ph_defaults.py  ph_dos.py  ph_exception.py  ph_exception_helper.py  ph_git.py  ph_modules.py  ph_process.py  ph_time.py  ph_util.py  ph_variables.py
python_helpers/: __init__.py  _expired_attributes.py  _git_info.py  _tool_name.py  _version.py  ph_bits.py  ph_colors.py  ph_constants.py  ph_constants_config.py  ph_crypto.py  ph_data_master.py  ph_data_master_keys.py  ph_defaults.py  ph_dos.py  ph_exception.py  ph_exception_helper.py  ph_exceptions.py  ph_file_extensions.py  ph_formats.py  ph_git.py  ph_keys.py  ph_modes_error_handling.py  ph_modes_execution.py  ph_modules.py  ph_process.py  ph_time.py  ph_util.py  ph_variables.py
runConfigurations/: Unittests (python_helpers_test_util.py).run.xml  Unittests in test_util.py.run.xml  test.run.xml  test_pythonHelpers.run.xml
scripts/: requirements_install_build.bat  requirements_list.bat  set_specific_version.bat
test/: test.py  test_util.py
tests/: test_util.py
util_helpers/: constants.py  constants_config.py  (+2 more)
(+8 files in other folders)
