[build-system]
requires = ["setuptools >= 58.1.0", "incremental >= 22.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonHelpers"
dynamic = ["version"] # Mark version as dynamic

description = "A sample Python project"

readme = {file = "README.md", content-type = "text/markdown"}
